reply spacing render fixed

--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
   },
   "dependencies": {
     "@electron/rebuild": "^4.0.1",
+    "@tailwindcss/typography": "^0.5.19",
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
