--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "description": "a desktop vessel for ache-integrated recursion, rendering nonlinear logic through local Electron and glyph-driven interfaces.",
   "main": "electron/main.mjs",
   "type": "module",
-
   "scripts": {
-    "dev": "ELECTRON_ENABLE_LOGGING=1 ELECTRON_DISABLE_SECURITY_WARNINGS=1 concurrently --raw -n vite,electron \"vite --port 6969 --strictPort --host --clearScreen=false\" \"wait-on tcp:6969 && electron .\"",
-    "electron": "electron .",
+    "prep:venv": "bash scripts/build_venv_core.sh",
+    "dev": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml ELECTRON_ENABLE_LOGGING=1 ELECTRON_DISABLE_SECURITY_WARNINGS=1 concurrently --raw -n vite,electron \"vite --port 6969 --strictPort --host --clearScreen=false\" \"wait-on tcp:6969 && electron .\"",
+    "electron": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "electron .",
-    "dist": "vite build && electron-builder",
-    "pack:dmg": "vite build && electron-builder --mac dmg --arm64",
-    "dist:mac:pkg": "vite build && electron-builder --mac pkg --arm64",
+    "start": "BLUR_HOME=$HOME/blur BLUR_CONFIG_PATH=$HOME/blur/config.yaml electron .",
+    "dist": "npm run prep:venv && vite build && BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder",
+    "pack:dmg": "npm run prep:venv && vite build && BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac dmg --arm64",
+    "dist:mac:pkg": "npm run prep:venv && vite build && BLUR_BUNDLE_VENV=1 BLUR_BUNDLE_MODELS=$HOME/blur/models BLUR_BUNDLE_ROOT=$HOME/blur BLUR_BUNDLE_BLURCHIVE=$HOME/blur/core/ouinet/blurchive/ecosystem electron-builder --mac pkg --arm64",
     "dist:win": "vite build && electron-builder --win nsis",
     "dist:linux": "vite build && electron-builder --linux AppImage deb",
     "rebuild:native": "electron-rebuild -f -w sqlite3",
     "postinstall": "electron-rebuild -w sqlite3 || true"
   },
-
   "keywords": [
     "electron",
     "blur-effect",
@@ -32,45 +31,32 @@
   ],
   "author": "glyphi blur <blurred.eth@proton.me>",
   "license": "ISC",
-
   "build": {
     "appId": "com.blur.app",
-
     "asar": true,
     "asarUnpack": [
+      "**/*.node",
       "electron/backend/**",
-      "**/*.node"
+      "core/bin/**",
+      "core/ouinet/**",
+      "core/ouinet/blurchive/**",
+      "blur_env-darwin-arm64/**"
     ],
-
+    "afterPack": "build/afterPack.cjs",
     "files": [
       "dist/**",
       "electron/**",
+      "!electron/backend/**",
       "!**/*.map"
     ],
-
     "extraResources": [
-      {
-        "from": ".",
-        "to": "Blur",
-        "filter": [
-          "config.yaml",
-          "acheflip.yaml",
-          "models/**",
-          "core/**"
-        ]
-      },
-      {
-        "from": "blur_env-darwin-arm64",
-        "to": "blur_env",
-        "filter": [
-          "bin/**",
-          "lib/**",
-          "include/**",
-          "pyvenv.cfg"
-        ]
-      }
+      { "from": "config.yaml", "to": "config.yaml" },
+      { "from": "acheflip.yaml", "to": "acheflip.yaml" },
+      { "from": "models", "to": "models" },
+      { "from": "electron/backend", "to": "core" },
+      { "from": "core", "to": "core" },
+      { "from": "blur_env-darwin-arm64", "to": "blur_env-darwin-arm64" }
     ],
-
     "mac": {
       "target": ["dmg"],
       "category": "public.app-category.productivity",
@@ -79,7 +65,6 @@
       "entitlementsInherit": "build/entitlements.mac.plist"
     }
   },
-
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@electron/notarize": "^2.3.0",
@@ -100,7 +85,6 @@
     "vite": "^7.1.1",
     "wait-on": "^8.0.4"
   },
-
   "dependencies": {
     "@electron/rebuild": "^4.0.1",
     "@tailwindcss/typography": "^0.5.19",
